objects/Professional_Services_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Engineering_Options__c</fullName>
        <label>Engineering Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Extended Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource_Location__c</fullName>
        <label>Resource Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offshore</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Remote (Onshore)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Professional Services Rates</relationshipLabel>
        <relationshipName>Professional_Services_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Professional Services Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Engineering_Options__c</columns>
        <columns>Resource_Location__c</columns>
        <columns>List_Price__c</columns>
        <columns>Unit_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Professional Services Rate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Services Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>